src/snapshots/camello__parser__tests__default_variable.snap
---
source: src/parser.rs
expression: syntax
---
ROOT@0..3
  STMT@0..3
    SCALAR_VAR@0..2
      DOLLAR@0..1 "$"
      DEFAULT_VAR@1..2
        IDENT@1..2 "_"
    SEMICOLON@2..3 ";"
