src/snapshots/camello__parser__tests__special_at_variable.snap
---
source: src/parser.rs
expression: syntax
---
ROOT@0..3
  STMT@0..3
    SCALAR_VAR@0..2
      DOLLAR@0..1 "$"
      SPECIAL_VAR@1..2
        AT@1..2 "@"
    SEMICOLON@2..3 ";"
