src/snapshots/camello__parser__tests__special_variables_in_expressions.snap
---
source: src/parser.rs
expression: syntax
---
ROOT@0..7
  STMT@0..7
    INFIX_EXPR@0..6
      SCALAR_VAR@0..3
        DOLLAR@0..1 "$"
        DEFAULT_VAR@1..2
          IDENT@1..2 "_"
        WHITESPACE@2..3 " "
      PLUS@3..4 "+"
      WHITESPACE@4..5 " "
      NUMBER@5..6 "1"
    SEMICOLON@6..7 ";"
